adaptation des endpoints update-profile